--- a/musicly/Views/Users/Details.cshtml
+++ b/musicly/Views/Users/Details.cshtml
@@ -1,60 +1,75 @@
-﻿@model musicly.Models.User
+﻿@using Microsoft.AspNetCore.Http
+@model musicly.Models.User
 
 @{
     ViewData["Title"] = "Details";
 }
+<style>
+    dt {
+        float: right !important;
+    }
 
-<h2>Details</h2>
+    dd {
+        text-align: right;
+    }
+</style>
+<h2 style="text-align:right">פרטים</h2>
 
 <div>
-    <h4>User</h4>
+    <h4 style="text-align:right">משתמש</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            שם משתמש
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UserName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Password)
+            סיסמא
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Password)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
+            שם פרטי
         </dt>
         <dd>
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+            שם משפחה
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.BirthDate)
+            תאריך לידה
         </dt>
         <dd>
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.City)
+            עיר
         </dt>
         <dd>
             @Html.DisplayFor(model => model.City)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsAdmin)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsAdmin)
-        </dd>
+        @if (Context.Session.GetString("Admin") != null && Context.Session.GetInt32("Admin") == 1)
+        {
+            <dt>
+                מנהל
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.IsAdmin)
+            </dd>
+        }
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">עריכה</a>
+    @if (Context.Session.GetString("Admin") != null && Context.Session.GetInt32("Admin") == 1)
+    {
+        <a asp-action="Index">חזרה לרשימה |</a>
+    }
+    </div>
