homepage and background edit

--- a/musicly/Views/Home/Index.cshtml
+++ b/musicly/Views/Home/Index.cshtml
@@ -1,11 +1,68 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div>
-    <center dir="rtl">
-        <video width="800" height="500" controls>
-            <source src="~/images/music-instruments-song-for-children-video-360p-mp4.mp4" type="video/mp4">
-        </video>
+
+<style>
+    h1 {
+        color: #111;
+        font-family: Gisha;
+        font-size: 95px;
+        font-weight: bold;
+        letter-spacing: -1px;
+        line-height: 1;
+        text-align: center;
+    }
+
+
+    h2 {
+        color: #111;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 30px;
+        font-weight: 300;
+        line-height: 32px;
+        margin: 0 0 72px;
+        text-align: center;
+    }
+
+
+    p {
+        color: #685206;
+        font-family: 'Helvetica Neue', sans-serif;
+        font-size: 14px;
+        line-height: 24px;
+        margin: 0 0 24px;
+        text-align: justify;
+        text-justify: inter-word;
+    }
+</style>
+<<div style="text-align: center">
+    <h1>ברוכים הבאים למיוזקלי</h1>
+    <div>
+        <center dir="rtl">
+            <video width="800" height="500" controls>
+                <source src="~/images/music-instruments-song-for-children-video-360p-mp4.mp4" type="video/mp4">
+            </video>
+            <br />
+        </center>
+    </div>
+    <h3 class="text-right" dir="rtl">
+        מיוזקלי נוצרה מתוך אהבה למוסיקה. בשבילנו מוסיקה היא דרך חיים ולא רק עסק. כל כלי הנגינה תחת קורת גג אחת. מיוזקלי הבית של כלי הנגינה.
         <br />
-    </center>
+        סאונד תאורה ומוסיקה הם המפתח לחוויה יוצאת דופן הנצרבת בזיכרון!
+        <br />
+        בין אם אתם אנשי מוזיקה יזמים, בעלי אולמות, מפיקים מוזיקליים או בליינים
+        <br />
+        אנחנו מאמינים שמגיע לכם לראות, לשמוע ולהרגיש אחרת.
+        <br />
+        זו בדיוק הסיבה שהקמנו עבורכם את מיוזקלי - רשת חנויות קונספט בפריסה ארצית מבית המסלול האקדמי המכללה למנהל.
+        <br />
+        מגוון המוצרים האינסופי שלנו, המותגים המובילים כמו גם צוותי המכירות המקצועיים והמכירה הישירה מהיבואן לצרכן
+        מאפשרים לנו להציע לכם ציוד רב מוצרי סאונד, הגברה באיכות גבוהה ובמחירים נוחים.
+        <br />
+        <br />
+        החטיבה המקצועית שלנו מתמחה בייעוץ והתקנת מערכות סאונד ותאורה לעסקים, מוסדות ופרויקטים.
+        בואו לגלות שותפים לחשיבה יצירתית ומקצועית, תוך מתן שירות מעולה ויכולת הבנת הצרכים הייחודיים לכם.
+        <br />
+        עבורנו סאונד ותאורה זו דרך חיים היוצרת חוויה ייחודית שתביא להצלחה שלכם ושלנו.
+    </h3>
 </div>
