show names for types

--- a/musicly/Views/Instruments/Index.cshtml
+++ b/musicly/Views/Instruments/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.ImagePath)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.InstrumentType)
+                @Html.DisplayNameFor(model => model.InstrumentType.Name)
             </th>
             <th></th>
         </tr>
