--- a/musicly/Views/Instruments/Create.cshtml
+++ b/musicly/Views/Instruments/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form asp-action="Create" enctype="multipart/form-data" onsubmit="return validateForm()">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -27,13 +27,13 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">                
+            <div class="form-group">
                 <label asp-for="ImagePath" class="control-label"></label>
-                <input type="file" name="file" />           
+                <input type="file" id="file" asp-for="ImagePath" name="file" />
             </div>
             <div class="form-group">
                 <label asp-for="TypeID" class="control-label"></label>
-                <select asp-for="TypeID" class ="form-control" asp-items="ViewBag.TypeID"></select>
+                <select asp-for="TypeID" class="form-control" asp-items="ViewBag.TypeID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -45,6 +45,18 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+
+<script>
+    function validateForm() {
+        if(document.getElementById("file").files.length == 0) {
+            alert("add file")
+            return false
+        }
+        return true
+
+    }
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
