--- a/musicly/Views/Instruments/Edit.cshtml
+++ b/musicly/Views/Instruments/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit" enctype="multipart/form-data">
+        <form asp-action="Edit" enctype="multipart/form-data" onsubmit="return validateForm()">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImagePath" class="control-label"></label>
-                <input type="file" name="file" />
+                <input id="file" type="file" asp-for="ImagePath" name="file" />
             </div>
             <div class="form-group">
                 <label asp-for="TypeID" class="control-label"></label>
@@ -48,6 +48,16 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script>
+    function validateForm() {
+        if(document.getElementById("file").files.length == 0) {
+            alert("add file")
+            return false
+        }
+        return true
+
+    }
+</script>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
