--- a/musicly/Views/InstrumentTypes/Edit.cshtml
+++ b/musicly/Views/InstrumentTypes/Edit.cshtml
@@ -4,29 +4,29 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2 style="text-align:right">ערוך</h2>
 
-<h4>InstrumentType</h4>
+<h4 style="text-align:right">סוג כלי נגינה</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+            <div class="form-group" style="text-align:right">
+                <label asp-for="Name" class="control-label">שם</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="שמור" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">חזרה לסוגי כלי נגינה</a>
 </div>
 
 @section Scripts {
