--- a/musicly/Views/InstrumentTypes/Create.cshtml
+++ b/musicly/Views/InstrumentTypes/Create.cshtml
@@ -4,28 +4,28 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2 style="text-align:right">יצירה</h2>
 
-<h4>InstrumentType</h4>
+<h4 style="text-align:right">כלי נגינה</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+            <div style="text-align:right" class="form-group">
+                <label  asp-for="Name" class="control-label">שם</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="צור" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">חזרה לסוגי כלי נגינה</a>
 </div>
 
 @section Scripts {
