--- a/musicly/Views/Instruments/Delete.cshtml
+++ b/musicly/Views/Instruments/Delete.cshtml
@@ -4,48 +4,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 style="text-align:right">מחיקה</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="text-align:right"> ?האם אתה בטוח שברצונך למחוק את @Html.DisplayFor(model => model.Name) </h3>
 <div>
-    <h4>Instrument</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ImagePath)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ImagePath)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.InstrumentType)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.InstrumentType.Id)
-        </dd>
-    </dl>
-    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="מחק" class="btn btn-default" /> |
+        <a asp-action="Index">חזרה לכל כלי הנגינה</a>
     </form>
 </div>
