--- a/musicly/Views/Instruments/Edit.cshtml
+++ b/musicly/Views/Instruments/Edit.cshtml
@@ -3,49 +3,56 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<style>
+    form{
+        text-align:center;
+    }
+    .form-group{
+        text-align:right
+    }
+</style>
+<h2 style="text-align:right">עריכה</h2>
 
-<h2>Edit</h2>
-
-<h4>Instrument</h4>
+<h4 style="text-align:right">כלי נגינה</h4>
 <hr />
-<div class="row">
+<div class="row" style="justify-content: center">
     <div class="col-md-4">
         <form asp-action="Edit" enctype="multipart/form-data" onsubmit="return validateForm()">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">שם</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="control-label">פירוט</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
+                <label asp-for="Price" class="control-label">מחיר</label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
                 <input id="file" type="file" asp-for="ImagePath" name="file" />
+                <label asp-for="ImagePath" class="control-label">תמונה</label>
             </div>
             <div class="form-group">
-                <label asp-for="TypeID" class="control-label"></label>
+                <label asp-for="TypeID" class="control-label">סוג כלי נגינה</label>
                 <select asp-for="TypeID" class="form-control" asp-items="ViewBag.TypeID"></select>
                 <span asp-validation-for="TypeID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="שמור" style="width:100%" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">חזרה לרשימה</a>
 </div>
 
 <script>
