--- a/musicly/Views/Instruments/Index.cshtml
+++ b/musicly/Views/Instruments/Index.cshtml
@@ -3,38 +3,44 @@
 @{
     ViewData["Title"] = "Index";
 }
+<style>
+    td{text-align:right}
+    th{text-align:center}
+</style>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">צור חדש</a>
 </p>
 <form asp-controller="Instruments" asp-action="Index" method="get">
-    <input name="searchString" type="text" placeholder="instrument name here"/>
+    <input name="searchString" type="text" placeholder="שם פריט לחיפוש"/>
 </form>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImagePath)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InstrumentType.Name)
-            </th>
             <th></th>
+            <th>
+                פירוט
+            </th>
+            <th>
+                מחיר
+            </th>
+            <th>
+                נתיב תמונה
+            </th>
+            <th>
+                סוג
+            </th>
+            <th>
+                שם
+            </th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                <a asp-action="Edit" asp-route-id="@item.Id">ערוך</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">פרטים</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">מחק</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
@@ -49,10 +55,9 @@
                 @Html.DisplayFor(modelItem => item.InstrumentType.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
+
         </tr>
 }
     </tbody>
