--- a/musicly/Views/Orders/Delete.cshtml
+++ b/musicly/Views/Orders/Delete.cshtml
@@ -2,33 +2,15 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2 style="text-align:right">מחיקה</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="text-align:right;direction:rtl">האם אתה בטוח שאתה רוצה למחוק את ההזמנה הזאת?</h3>
 <div>
-    <h4>Order</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.OrderDate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.User.Id)
-        </dd>
-    </dl>
-    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="מחק" class="btn btn-default" /> |
+        <a asp-action="Index">חזרה להזמנות</a>
     </form>
 </div>
