--- a/musicly/Views/Orders/Index.cshtml
+++ b/musicly/Views/Orders/Index.cshtml
@@ -4,37 +4,36 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    td{text-align:right}
+    th{text-align:center;}
+</style>
+<h2 style="text-align:right">הזמנות</h2>
 
-<h2>Index</h2>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User)
-            </th>
             <th></th>
+            <th>
+                תאריך הזמנה
+            </th>
+            <th>
+                שם משתמש
+            </th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
+                <a asp-action="Details" asp-route-id="@item.Id">מידע</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">מחיקה</a> 
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.OrderDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @Html.DisplayFor(modelItem => item.User.UserName)
             </td>
         </tr>
 }
