--- a/musicly/Views/Orders/OrdersForUser.cshtml
+++ b/musicly/Views/Orders/OrdersForUser.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ההזמנות שלי</h2>
+<h2 style="text-align:right">ההזמנות שלי</h2>
 
 <table class="table">
     <thead>
