--- a/musicly/Views/Users/Delete.cshtml
+++ b/musicly/Views/Users/Delete.cshtml
@@ -4,60 +4,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 style="text-align:right">מחיקה</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 style="text-align:right"> ?האם אתה בטוח שברצונך למחוק את @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName) </h3>
 <div>
-    <h4>User</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Password)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.BirthDate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.BirthDate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.City)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsAdmin)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsAdmin)
-        </dd>
-    </dl>
-    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="מחק" class="btn btn-default" /> |
+        <a asp-action="Index">חזרה לכל המשתמשים</a>
     </form>
 </div>
