error page redirection

--- a/musicly/Views/Shared/_Layout.cshtml
+++ b/musicly/Views/Shared/_Layout.cshtml
@@ -137,9 +137,9 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="direction: rtl; text-align:right">
                             <a class="dropdown-item" asp-area="" asp-controller="Statistics" asp-action="Index">סטטיסטיקות של קניות</a>
+                            <a class="dropdown-item" asp-area="" asp-controller="Orders" asp-action="Index">ניהול הזמנות</a>
                             <a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="Index">ניהול משתמשים</a>
                             <a class="dropdown-item" asp-area="" asp-controller="InstrumentTypes" asp-action="Index">ניהול סוגי כלים</a>
-                            <a class="dropdown-item" asp-area="" asp-controller="InstrumentOrders" asp-action="Index">ניהול הזמנות</a>
                             <a class="dropdown-item" asp-area="" asp-controller="Instruments" asp-action="Index">ניהול כלי נגינה</a>
                         </div>
                     </li>
