--- a/musicly/Views/Shared/Error.cshtml
+++ b/musicly/Views/Shared/Error.cshtml
@@ -65,6 +65,6 @@
         </div>
         <h2 style="text-align:right;direction:rtl">אופס!</h2>
         <p style="text-align:right;direction:rtl">@Model.Description</p>
-        <a href="#">חזור לדף הבית</a>
+        <a href="home">חזור לדף הבית</a>
     </div>
 </div>
