--- a/musicly/Views/Home/Index.cshtml
+++ b/musicly/Views/Home/Index.cshtml
@@ -3,15 +3,12 @@
 }
 
 <style>
-    h1 {
-        color: #111;
-        font-family: Gisha;
-        font-size: 95px;
-        font-weight: bold;
-        letter-spacing: -1px;
-        line-height: 1;
-        text-align: center;
+    font-face {
+        font-family: myFirstFont;
+        src: url(//fonts.googleapis.com/css?family=Open+Sans);
     }
+
+h1 { color: #111; font-family: Gisha; font-size: 95px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; }
 
 
     h2 {
@@ -27,7 +24,7 @@
 
     p {
         color: #685206;
-        font-family: 'Helvetica Neue', sans-serif;
+        font-family: myFirstFont, sans-serif; 
         font-size: 14px;
         line-height: 24px;
         margin: 0 0 24px;
