--- a/musicly/Views/Users/Index.cshtml
+++ b/musicly/Views/Users/Index.cshtml
@@ -16,6 +16,9 @@
 <p>
     <a asp-action="Create">יצירה</a>
 </p>
+<form asp-controller="Users" asp-action="Index" method="get">
+    <input name="searchString" type="text" placeholder="שם פרטי כאן" />
+</form>
 <table class="table">
     <thead>
         <tr>
